gnome-terminal (3.20.1-1) UNRELEASED; urgency=medium

  * New upstream release
    - updated translations

 -- Simon McVittie <smcv@debian.org>  Tue, 12 Apr 2016 21:51:44 +0100

gnome-terminal (3.20.0-3) experimental; urgency=medium

  * Team upload.
  * Improve patch for #819712 to account for client-side decorations
    under Wayland or with GTK_CSD=1 under X11 (Closes: #819732)

 -- Simon McVittie <smcv@debian.org>  Mon, 04 Apr 2016 10:04:39 +0100

gnome-terminal (3.20.0-2) experimental; urgency=medium

  * Team upload.
  * Add patches restoring the ability for the terminal to resize itself
    (Closes: #819712)
  * Depend on vte from experimental to enforce having a vte version that
    was compiled against Gtk 3.20, avoiding miscounting the padding and
    sizing windows 1 column x 1 row too small

 -- Simon McVittie <smcv@debian.org>  Fri, 01 Apr 2016 09:34:13 +0100

gnome-terminal (3.20.0-1) unstable; urgency=medium

  * New upstream release.
  * Update build-dependencies according to configure.ac changes:
    - bump libgtk-3-dev to >= 3.12.0
    - bump libvte-2.91-dev to >= 0.44.0
    - add libpcre2-dev (>= 10.00)
  * Fix Don-t-allow-the-theme-to-set-black-on-black.patch to apply again.
    Note: this patch could possibly be dropped since raleigh is no longer
          the default theme.
  * Have quilt refresh remaining patches.

 -- Andreas Henriksson <andreas@fatal.se>  Fri, 25 Mar 2016 09:48:50 +0100

gnome-terminal (3.18.3-1) unstable; urgency=medium

  * New upstream release.
  * Refresh patches.
  * Bump Standards-Version to 3.9.7.

 -- Michael Biebl <biebl@debian.org>  Sun, 06 Mar 2016 22:18:26 +0100

gnome-terminal (3.18.2-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Wed, 11 Nov 2015 15:52:44 +0100

gnome-terminal (3.18.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump Build-Depends on libvte-2.91-dev to (>= 0.42.1) as per configure.ac.
